syntax = "proto3";

package cod_pb;

message Variable {
    string name = 1;
    oneof Value {
        int32 value_int = 2;
        float value_float = 3;
        string value_string = 4;    
    }
}

message Variables {
    repeated Variable variable = 1;
}

message Object {
    string name = 1;
    Variables variables = 2;
    NestedObjects nested_objects = 3;
}

message NestedObjects {
    repeated Object nested_object = 1;
}

message Objects {
    repeated Object object = 1;
}

message Map {
    repeated Variable variables = 1;
}

message Cod {
    Variables constants = 1;
    Objects objects = 2;
    Map gfx_map = 3;
}